<resources>
    <string name="app_name">ScanSaver</string>
    <string name="create_account">Create an Account</string>
    <string name="sign_in">Sign In</string>

    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>

    <!--Gender Spinner-->
    <string name="gender_prompt">Choose a Gender</string>
    <string-array name="gender">
        <item>Female</item>
        <item>Male</item>
    </string-array>

    <!--  Month Names     -->
    <string-array name="month_names">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>

    <!--Spending Monthly and yearly-->
    <string-array name="spending_category">
        <item>Monthly</item>
        <item>Annually</item>
    </string-array>

    <string name="create_pdf">Create PDF</string>
    <string name="msg_progress_pdf">Converting to PDF file. Please wait a few moment.\nTotal page :%s</string>
    <string name="msg_progress_merger_pdf">All pdf file merge into one file. Please wait few moment. After done of merging pdf file, go to pdf file path.</string>
    <string name="error_file">Can\'t read pdf file</string>
    <string name="send_to">Send mail...</string>

    <string name="reset_prompt">Choose a Method</string>
    <string-array name="reset">
        <item>Email</item>
        <item>Phone Number</item>
    </string-array>
    <string name="title_activity_user_nav_drawer">UserNavDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_spending">Spending</string>
    <string name="menu_expenses">Expenses</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_notifications">Notifications</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_help_center">Help &amp; Feedback</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="verify_otp">Verify \nOTP</string>

    <string name="barcode">Barcode Scanner for Grocery Budgeting</string>

    <string name="help_center">It looks like you are experiencing problems in our application. We are here to help you so please get in touch with us.</string>
    <string name="email_us">You can email us at:</string>

    <string name="terms_conditions"> Welcome to our Application which developed by the researchers of Technological Institute of the Philippines – Manila (TIP).
        If you continue to browse and use this application, you are agreeing to comply with and be bound by the following terms and conditions of use,
        which together with our privacy policy govern our relationship with you in relation to this Application. These Terms include all other policies,
        rules and terms and conditions as set forth in Service materials from time to time, all of which are incorporated herein. If you object to anything
        in these Terms, the Privacy Policy, or the other Policies, do not use the Site or the Services.

        \n\n<b>Condition of Use</b>\n\n
        We will provide this Mobile Application to you, which is subject to the conditions stated below in this document. Every time you visit this Mobile
        Application, use its service you accept the following conditions. Therefore, we urge you to read and understand it carefully.
        Your use of any information or materials on this Mobile Application is entirely at your own risk, for which we shall not be liable. It shall be your own
        responsibility to ensure that any products, services, or information available through this application meet your specific requirements.

        \n\n<b>Publicity of the Application</b>\n\n
        By posting Content to the Service, you grant Us the right and license to use, modify, publicly perform, publicly display, reproduce, and distribute such
        Content on and through the Service. You retain all Your rights to any Content You submit, post, or display on or through the Service and You are
        responsible for protecting those rights. You agree that this license includes the right for Us to make Your Content available to other users of
        the Service, who may also use Your Content subject to these Terms.
        The Company is not responsible for the content of the Service\'s users. You expressly understand and agree that you are solely responsible for the
        content and for all activity that occurs under your account, whether done so by You or any third person using Your account.

        \n\n<b>Copyright</b>\n\n
        This website contains material which is owned by or licensed to us. It includes, but is not limited to, to the contents, layout, design, colors,
        appearance, graphics and imagery of the Mobile Application, Contents and Materials as well as copyrights, trademarks and other intellectual
        property contained in the Mobile Application. All trademarks reproduced in this Mobile Application, which are not the property of, or licensed
        to the operator, are acknowledged on the Application.
        Unauthorized use of this website may give rise to a claim for damages and/or be a criminal offence.

        \n\n<b>Linkage to third parties</b>\n\n
        From time to time, this Mobile Application may also include links to other websites. These links are provided for your convenience to provide further
        information. They do not signify that we endorse the website(s). We have no responsibility for the content of the linked website(s).

        \n\n<b>Termination and Suspension of the service</b>\n\n
        If you fail, or suspect on reasonable grounds that you have failed to comply with any of the provisions of this Agreement, operators may, without
        notice to you: \n(i) terminate this agreement and/or your Account, and you will remain liable for all the amounts due under your Account to and
        including the date of termination; and/or \n(ii) terminate the license to the software; and/or \n(iii) preclude your access to the Mobile Application.
        Termination will not affect the products that you have already acquired. However, you may be unable to authorize additional mobile phones to
        use the service. You may cease to use the service at any time.

        \n\n<b>Applicable Law</b>\n\n
        By visiting this Mobile Application, you agree that the laws of the Philippines, without regard to principles of conflict laws, will govern these
        terms and condition, or any dispute of any sort that might come between you or business partners and associates.
        By continuing to use our Mobile Application you acknowledge that you have had the chance to review and consider this Terms and Condition, and you
        acknowledge that you agreed to it. This means that you also consent to the use of your information and the method of disclosure as described in
        this Terms and Condition. If your do not understand the Terms and Condition or do not agree to it, then please do not use the Mobile Application.

    </string>

    <string name="about_dev_crew">Scan Saver is Barcode Scanner Grocery Budgeting Mobile Application developed by the student researchers of Technological
        Institute of the Philippines (TIP) - Manila Campus that aims to help the customers to manage their budget real time and determine the cost of
        groceries of the customer\'s monthly and yearly spending.
    </string>

</resources>