<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_baseline_space_dashboard_24"
            android:title="@string/menu_dashboard"
            android:iconTint="@color/blue_dark"/>
        <item
            android:id="@+id/nav_spending"
            android:icon="@drawable/ic_baseline_analytics_24"
            android:title="@string/menu_spending"
            android:iconTint="@color/blue_dark"/>
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/menu_settings"
            android:iconTint="@color/blue_dark"/>
        <item
            android:id="@+id/nav_help_center"
            android:icon="@drawable/ic_baseline_help_center_24"
            android:title="@string/menu_help_center"
            android:iconTint="@color/blue_dark"/>
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_baseline_logout_24"
            android:title="@string/menu_logout"
            android:iconTint="@color/blue_dark"/>
    </group>
</menu>